overflow solved

--- a/style.css
+++ b/style.css
@@ -714,7 +714,7 @@ font-family: 'Trispace', sans-serif;
     background-position: bottom right;
     background-repeat: no-repeat;
     flex-direction: column;
-    width: 100vw;
+    width: 98.87vw;
 }
 
 .gennext {
